third attempt to fix reviews on mobile, should work now

--- a/styles/index.css
+++ b/styles/index.css
@@ -26,4 +26,8 @@ h1,h2,h3,h4,h5,h6 {
 }
 #facebook{
    text-align: center;
+   width: 100%;
+   overflow: auto;
+   padding: 0;
+   margin: 0;
 }
